# We need to explicitly specify resolver 2.
# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, but that does not appear to be the case
resolver = "2"

[package]
name = "mc-build-rs"
version = "0.1.1-beta.0"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["development-tools::build-utils"]
description = "Cargo build script helper"
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["utility", "cargo", "build"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/build-rs"
rust-version = "1.68"

[profile.release]
lto = "thin"

[package.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"

pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace= "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/sgx-sigstruct/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]
cargo-emit = "0.2.1"
displaydoc = { version = "0.2", default-features = false }
lazy_static = "1.4"
url = "2.3"
walkdir = "2.3"

[dev-dependencies]
fluent-asserter = "0.1.9"
mockall = "0.11.3"
mockall_double = "0.3.0"
temp-env = "0.3.2"
